--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,16 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/btn_view_drink"
+        style="@style/buttonStyle"
+        android:layout_width="wrap_content"
+        android:padding="10dp"
+        android:layout_marginVertical="0dp"
+        android:text="View Drink"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <TextView
         android:id="@+id/tv_header_1"
         style="@style/textStyle"
